package com.directi.training.dip.exercise;

public interface IReader {
    String read() throws Exception;
} 