package com.directi.training.dip.exercise;

public interface IWriter {
    void write(String data) throws Exception;
} 